--- a/core/templates/clothing.html
+++ b/core/templates/clothing.html
@@ -169,7 +169,7 @@
                         <div class="col-md-7 col-sm-12 col-xs-12">
                             <div class="product-deatil">
                                 <h5 class="name">
-                                    <a href="#">{{ product.name }}<span>{{ roduct.category.name }}</span></a>
+                                    <a href="#">{{ product.name }}<span>{{ product.category.name }}</span></a>
                                 </h5>
                                 <p class="price-container">
                                     <span>{{ product.price }}</span>
