--- a/core/templates/contact_success.html
+++ b/core/templates/contact_success.html
@@ -1,5 +1,11 @@
-{% extends 'home.html' %}
-{% block content %}
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Contact successfully </title>
+
+<body>
+{% include 'nav.html' %}
 <h2>Your contact is successfully saved. If you want to inquire about more queries, please contact us.</h2>
 <br>
 <table class="table table-hover">
@@ -33,4 +39,6 @@
 
   </tbody>
 </table>
-{% endblock %}
+</body>
+</head>
+</html>
