--- a/core/templates/sports & outdoor.html
+++ b/core/templates/sports & outdoor.html
@@ -169,15 +169,15 @@
                         <div class="col-md-7 col-sm-12 col-xs-12">
                             <div class="product-deatil">
                                 <h5 class="name">
-                                    <a href="#">{{ item.name }}<span>{{ item.category }}</span></a>
+                                    <a href="#">{{ product.name }}<span>{{ <product class="category name"></product> }}</span></a>
                                 </h5>
                                 <p class="price-container">
-                                    <span>{{ item.price }}</span>
+                                    <span>{{ product.price }}</span>
                                 </p>
                                 <span class="tag1"></span>
                             </div>
                             <div class="description">
-                                <p>{{ item.description }}</p>
+                                <p>{{ product.description }}</p>
                             </div>
                             <div class="product-info smart-form">
                                 <div class="row">
