--- a/core/templates/Beauty.html
+++ b/core/templates/Beauty.html
@@ -169,15 +169,15 @@
                         <div class="col-md-7 col-sm-12 col-xs-12">
                             <div class="product-deatil">
                                 <h5 class="name">
-                                    <a href="#">{{ item.name }}<span>{{ item.category }}</span></a>
+                                    <a href="#">{{ product.name }}<span>{{ product.category.name }}</span></a>
                                 </h5>
-                                <p class="price-container">
-                                    <span>{{ item.price }}</span>
-                                </p>
+                                <h5 class="price-container">
+                                    <span> $ {{ product.price }}</span>
+                                </h5>
                                 <span class="tag1"></span>
                             </div>
                             <div class="description">
-                                <p>{{ item.description }}</p>
+                                <p>{{ product.description }}</p>
                             </div>
                             <div class="product-info smart-form">
                                 <div class="row">
