--- a/core/templates/books.html
+++ b/core/templates/books.html
@@ -171,7 +171,7 @@
                                     <a href="#">{{ product.name }}<span>{{ product.category.name }}</span></a>
                                 </h5>
                                 <p class="price-container">
-                                    <span>{{ product.price }}</span>
+                                    <span> $ {{ product.price }}</span>
                                 </p>
                                 <span class="tag1"></span>
                             </div>
