--- a/core/templates/contact.html
+++ b/core/templates/contact.html
@@ -1,6 +1,8 @@
-{% extends 'nav.html' %}
 
-{% block content %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Contact Us</title>
 <style>
    .highlight-btn {
       background-color: #f0ad4e;
@@ -29,6 +31,8 @@
       text-align: center;
     }
   </style>
+  <body>
+  {% include 'nav.html' %}
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
@@ -36,20 +40,18 @@
         <p class="container-paragraph">Feel free to get in touch with us for any inquiries or feedback. Fill out the form below, and we'll get back to you as soon as possible.</p>
         <form action="{{ url_for('contact') }}" method="POST">
           <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" name="name" placeholder="Your name">
-          </div>
-          <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Your email">
-          </div>
-          <div class="form-group">
             <label for="message">Message</label>
             <textarea class="form-control" id="message" name="message" rows="5" placeholder="Your message"></textarea>
           </div>
+          <div class="form-group">
+            <input type="hidden" name="csrf_token" value = "{{ csrf_token() }}" />
+        </div>
+        
           <button type="submit" class="highlight-btn">Submit</button>
         </form>
       </div>
     </div>
   </div>
-{% endblock %}
+</body>
+</head>
+</html>
