--- a/core/templates/electronics.html
+++ b/core/templates/electronics.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Beauty List</title>
+    <title>Electronics List</title>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <style>
         body {
@@ -152,6 +152,9 @@
     </style>
 </head>
 <body>
+    <!-- Include navigation -->
+  {% include 'nav.html' %}
+
     <div class="container">
         <div class="row">
             <!-- Generate product HTML for each product -->
