--- a/core/templates/books.html
+++ b/core/templates/books.html
@@ -152,6 +152,9 @@
     </style>
 </head>
 <body>
+    <!-- Include navigation -->
+  {% include 'nav.html' %}
+
     <div class="container">
         <div class="row">
             <!-- Generate product HTML for each product -->
