--- a/core/templates/clothing.html
+++ b/core/templates/clothing.html
@@ -183,15 +183,21 @@
                                 <p>{{ product.description }}</p>
                             </div>
                             <div class="product-info smart-form">
+                                <form action="{{ url_for('add_to_cart', product_id=product.id) }}", method="post">
                                 <div class="row">
                                     <div class="col-md-6 col-sm-6 col-xs-6">
                                         <label for="quantity">Quantity:</label>
                                         <input type="number" id="quantity" name="quantity" min="1" value="1">
                                     </div>
                                     <div class="col-md-6 col-sm-6 col-xs-6">
-                                        <a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
+                                        <input type="hidden" name="csrf_token" value = "{{ csrf_token() }}" />
+                                    </div>
+                                    
+                                    <div class="col-md-6 col-sm-6 col-xs-6">
+                                        <button class="btn btn-success">Add to cart></button>
                                     </div>
                                 </div>
+                            </form>
                             </div>
                         </div>
                     </div>
